# docling-do-plugin

./: main.py  pyproject.toml
src/dop/: module.py
