[project]
name = "docling-do-plugin"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.9"
dependencies = [
    "addict>=2.4.0",
    "docling>=2.58.0",
    "easydict>=1.13",
    "einops>=0.8.1",
    "matplotlib>=3.10.7",
    "tokenizers>=0.22.1",
    "torch>=2.9.0",
    "transformers>=4.57.1",
]

[project.entry-points."docling"]
deepseek-ocr = "dop.module"

[[tool.uv.index]]
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple"
default = true
